修改window启动脚本程序